--- a/index.html
+++ b/index.html
@@ -28,8 +28,146 @@
       вместо миллионов инструкций в секунду (MIPS). <a href="public/history.html">Посмотреть Историю</a>
     </p>
     <img class="large-image" src="/photos/sc1.jpg" alt="sc1" />
-    <a href="public/source.html">Использованные источники</a>
   </div>
+  <table>
+    <caption><h1>Дополнительная информация: Суперкомпьютеры и их характеристики</h1></caption>
+    <thead>
+    <tr>
+      <th rowspan="2">№</th>
+      <th rowspan="2">Модель</th>
+      <th colspan="3">Производительность и компоненты</th>
+      <th rowspan="2">Год выпуска</th>
+    </tr>
+    <tr>
+      <th>Производительность (PFlops)</th>
+      <th>Процессоры</th>
+      <th>Память (ТБ)</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+      <td>1</td>
+      <td>Fugaku</td>
+      <td>442.01</td>
+      <td>158,976</td>
+      <td>8</td>
+      <td>2020</td>
+    </tr>
+    <tr>
+      <td>2</td>
+      <td>Summit</td>
+      <td>148.6</td>
+      <td>27,648</td>
+      <td>10</td>
+      <td>2018</td>
+    </tr>
+    <tr>
+      <td>3</td>
+      <td>Sierra</td>
+      <td>94.6</td>
+      <td>15,360</td>
+      <td>12</td>
+      <td>2018</td>
+    </tr>
+    <tr>
+      <td>4</td>
+      <td>Sunway TaihuLight</td>
+      <td>93.0</td>
+      <td>40,960</td>
+      <td>25</td>
+      <td>2016</td>
+    </tr>
+    <tr>
+      <td>5</td>
+      <td>Cray Titan</td>
+      <td>17.6</td>
+      <td>18,688</td>
+      <td>8</td>
+      <td>2012</td>
+    </tr>
+    </tbody>
+  </table>
+  <div class="flex-col">
+    <h1>Суперкомпьютеры</h1>
+    <ol style="align-self: start; text-align: start;">
+      <li><strong>Fugaku</strong>
+        <ul>
+          <li>Разработан в Японии.</li>
+          <li>Производительность: 442.01 Петафлопс.</li>
+          <li>Используется для исследований в области медицины, физики и других научных областях.</li>
+          <li>На данный момент является самым быстрым суперкомпьютером в мире.</li>
+        </ul>
+      </li>
+      <li><strong>Summit</strong>
+        <ul>
+          <li>Разработан в США компанией IBM.</li>
+          <li>Производительность: 148.6 Петафлопс.</li>
+          <li>Оснащён более чем 27 тысячами процессоров.</li>
+          <li>Используется для различных научных исследований, в том числе в области искусственного интеллекта и машинного обучения.</li>
+        </ul>
+      </li>
+      <li><strong>Sierra</strong>
+        <ul>
+          <li>Также разработан в США, является частью программы по высокопроизводительным вычислениям для Национального ядерного центра.</li>
+          <li>Производительность: 94.6 Петафлопс.</li>
+          <li>Оснащён 15 тысячами процессоров.</li>
+          <li>Используется для симуляции ядерных взрывов и анализа других ядерных исследований.</li>
+        </ul>
+      </li>
+      <li><strong>Sunway TaihuLight</strong>
+        <ul>
+          <li>Разработан в Китае.</li>
+          <li>Производительность: 93.0 Петафлопс.</li>
+          <li>Является одним из самых мощных суперкомпьютеров, построенных в Китае.</li>
+          <li>Используется в таких областях, как метеорология, биология и исследования в области искусственного интеллекта.</li>
+        </ul>
+      </li>
+      <li><strong>Cray Titan</strong>
+        <ul>
+          <li>Разработан в США.</li>
+          <li>Производительность: 17.6 Петафлопс.</li>
+          <li>Используется для вычислений в научных, инженерных и образовательных приложениях.</li>
+          <li>Был одним из самых мощных суперкомпьютеров до 2018 года.</li>
+        </ul>
+      </li>
+      <li><strong>Blue Gene</strong>
+        <ul>
+          <li>Разработан в США, компанией IBM.</li>
+          <li>Используется в области биологии, медицины, химии и физики.</li>
+          <li>Разные версии Blue Gene демонстрируют различные уровни производительности, от нескольких терафлопс до петафлопс.</li>
+        </ul>
+      </li>
+      <li><strong>Tianhe-2 (Milky Way-2)</strong>
+        <ul>
+          <li>Разработан в Китае.</li>
+          <li>Производительность: 33.9 Петафлопс.</li>
+          <li>Используется для научных исследований, моделирования и обработки данных.</li>
+          <li>В 2013 году был признан самым быстрым суперкомпьютером в мире.</li>
+        </ul>
+      </li>
+      <li><strong>LUMI</strong>
+        <ul>
+          <li>Разработан в Европе.</li>
+          <li>Планируемая производительность: 550 Петафлопс.</li>
+          <li>Ожидается в 2021 году как один из самых мощных суперкомпьютеров.</li>
+          <li>Используется для исследований в области экологии, здоровья и искусственного интеллекта.</li>
+        </ul>
+      </li>
+    </ol>
+  </div>
+  <div class="flex-col">
+    <h2>Суперкомпьютеры специального назначения</h2>
+    <p class="text" style="width: 800px; align-self: center">
+      Был разработан ряд специализированных систем, предназначенных для решения одной задачи. Это позволяет использовать
+      специально запрограммированных микросхем FPGA или даже специализированных ASIC, что позволяет улучшить соотношение цена/производительность, пожертвовав при этом
+      общности. Примерами специализированных суперкомпьютеров являются Belle, Deep Blue и Hydra для игры в
+      шахматы, Gravity Pipe для астрофизики, MDGRAPE-3 для предсказания структуры белков и молекулярной динамики,
+      и Deep Crack для взлома шифра DES.
+    </p>
+  </div>
+  <article>
+    <a href="public/source.html">Использованные источники</a>
+  </article>
 </main>
 <footer class="footer">
   <h4>Разработка продолжается. Если вы встретили баг, пожалуйста, напишите <a href="https://t.me/tomtork">автору</a>.</h4>
