--- a/public/history.html
+++ b/public/history.html
@@ -1,15 +1,15 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>История</title>
-    <link rel="stylesheet" href="/style.css" type="text/css">
+    <link rel="stylesheet" href="/src/style.css" type="text/css">
 </head>
 <body>
 <div style="margin: 4px">
     <div>
         <div style="display: flex; flex-direction: row;">
-            <p style="margin: 10px; width: 800px;">
+            <p class="text" style="margin: 10px; width: 800px;">
                 В 1960 году UNIVAC построила Ливерморский компьютер атомных исследований (LARC), который сегодня считается одним из первых суперкомпьютеров.
                 для Центра исследований и разработок ВМС США. Он по-прежнему использовал высокоскоростную барабанную память, а не новую.
                 новую технологию дисковых накопителей.[14] Также среди первых суперкомпьютеров был IBM 7030 Stretch.
@@ -34,7 +34,9 @@
                 <p>Печатная плата IBM 7030.</p>
             </div>
         </div>
-        <a style="align-self: start; margin-left: 10px;" href="../../index.html">Вернуться на главную.</a>
+        <div class="flex-col w-full">
+            <a class="w-100" style="align-self: start; text-align: start; margin-left: 10px;" href="../index.html">Вернуться на главную.</a>
+        </div>
     </div>
 </div>
 </body>
