--- a/public/source.html
+++ b/public/source.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Использованные источники</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/src/style.css">
 </head>
 <body>
+<div class="flex-col">
+    <h1>Использованные источники</h1>
+    <ol style="text-align: start;">
+        <li><a href="https://en.wikipedia.org/wiki/Supercomputer">Википедия</a></li>
+        <li><a href="https://astanahub.com/ru/blog/superkompiutery-mira">Суперкомпьютеры мира</a></li>
+    </ol>
+    <div class="flex-col w-full">
+        <a class="w-100" style="align-self: start; text-align: start; margin-left: 10px; margin-bottom: 20px; margin-top: 5px" href="../index.html">Вернуться на главную.</a>
+    </div>
+</div>
 
 </body>
 </html>
