--- a/index.html
+++ b/index.html
@@ -24,13 +24,20 @@
     <h2>Что такое суперкомпьютер?</h2>
     <p class="text" style="width: 800px">
       <span style="font-style: italic">Суперкомпьютер</span> - это тип компьютера с высоким уровнем производительности по сравнению с компьютером общего назначения.
-      Производительность суперкомпьютера обычно измеряется в операциях с плавающей точкой в секунду (FLOPS)
-      вместо миллионов инструкций в секунду (MIPS). <a href="public/history.html">Посмотреть Историю</a>
+      Производительность суперкомпьютера обычно измеряется в операциях с плавающей точкой в секунду <q>(FLOPS)</q>
+      вместо миллионов инструкций в секунду <q>(MIPS)</q>. <a href="pages/history.html">Посмотреть Историю</a>
+      Производительность суперкомпьютеров чаще всего оценивается и выражается в количестве операций над числами с плавающей точкой в секунду (FLOPS). Это связано с тем, что задачи численного моделирования, под которые и создаются суперкомпьютеры, чаще всего требуют вычислений, оперирующих вещественными числами (зачастую с высокой степенью точности) а не целыми числами. Поэтому для суперкомпьютеров неприменима мера быстродействия обычных компьютерных систем — количество миллионов операций в секунду (MIPS). При всей своей неоднозначности и приблизительности, оценка во флопсах позволяет легко сравнивать суперкомпьютерные системы друг с другом, опираясь на объективный критерий.
+
+      Первые суперкомпьютеры имели производительность порядка 1 кфлопс, то есть 1000 операций с плавающей точкой в секунду. В США компьютер, имевший производительность в 1 МФлопс (1 миллион флопсов) (CDC 6600), был создан в 1964 году. Известно, что в 1963 году в московском НИИ-37 (позже НИИ ДАР) был разработан компьютер на основе модулярной арифметики с производительностью 2,4 млн оп/с. Это был экспериментальный компьютер второго поколения (на дискретных транзисторах) Т340-А[8] (гл. конструктор Д. И. Юдицкий). Однако прямое сравнение производительности модулярных и классических («фон-неймановских») ЭВМ некорректно. Модулярная арифметика оперирует только с целыми числами. Представление вещественных чисел в модулярных ЭВМ возможно только в формате с фиксированной запятой, недостатком коего является существенное ограничение диапазона представимых чисел.
     </p>
-    <img class="large-image" src="/photos/sc1.jpg" alt="sc1" />
+    <picture><img class="large-image" src="/photos/sc1.jpg" alt="sc1" /></picture>
   </div>
   <table>
-    <caption><h1>Дополнительная информация: Суперкомпьютеры и их характеристики</h1></caption>
+    <colgroup>
+      <col class="col1">
+      <col class="col2">
+    </colgroup>
+    <caption><h1><samp>Дополнительная информация: Суперкомпьютеры и их характеристики</samp></h1></caption>
     <thead>
     <tr>
       <th rowspan="2">№</th>
@@ -87,90 +94,97 @@
     </tr>
     </tbody>
   </table>
-  <div class="flex-col">
-    <h1>Суперкомпьютеры</h1>
-    <ol style="align-self: start; text-align: start;">
-      <li><strong>Fugaku</strong>
-        <ul>
-          <li>Разработан в Японии.</li>
-          <li>Производительность: 442.01 Петафлопс.</li>
-          <li>Используется для исследований в области медицины, физики и других научных областях.</li>
-          <li>На данный момент является самым быстрым суперкомпьютером в мире.</li>
-        </ul>
-      </li>
-      <li><strong>Summit</strong>
-        <ul>
-          <li>Разработан в США компанией IBM.</li>
-          <li>Производительность: 148.6 Петафлопс.</li>
-          <li>Оснащён более чем 27 тысячами процессоров.</li>
-          <li>Используется для различных научных исследований, в том числе в области искусственного интеллекта и машинного обучения.</li>
-        </ul>
-      </li>
-      <li><strong>Sierra</strong>
-        <ul>
-          <li>Также разработан в США, является частью программы по высокопроизводительным вычислениям для Национального ядерного центра.</li>
-          <li>Производительность: 94.6 Петафлопс.</li>
-          <li>Оснащён 15 тысячами процессоров.</li>
-          <li>Используется для симуляции ядерных взрывов и анализа других ядерных исследований.</li>
-        </ul>
-      </li>
-      <li><strong>Sunway TaihuLight</strong>
-        <ul>
-          <li>Разработан в Китае.</li>
-          <li>Производительность: 93.0 Петафлопс.</li>
-          <li>Является одним из самых мощных суперкомпьютеров, построенных в Китае.</li>
-          <li>Используется в таких областях, как метеорология, биология и исследования в области искусственного интеллекта.</li>
-        </ul>
-      </li>
-      <li><strong>Cray Titan</strong>
-        <ul>
-          <li>Разработан в США.</li>
-          <li>Производительность: 17.6 Петафлопс.</li>
-          <li>Используется для вычислений в научных, инженерных и образовательных приложениях.</li>
-          <li>Был одним из самых мощных суперкомпьютеров до 2018 года.</li>
-        </ul>
-      </li>
-      <li><strong>Blue Gene</strong>
-        <ul>
-          <li>Разработан в США, компанией IBM.</li>
-          <li>Используется в области биологии, медицины, химии и физики.</li>
-          <li>Разные версии Blue Gene демонстрируют различные уровни производительности, от нескольких терафлопс до петафлопс.</li>
-        </ul>
-      </li>
-      <li><strong>Tianhe-2 (Milky Way-2)</strong>
-        <ul>
-          <li>Разработан в Китае.</li>
-          <li>Производительность: 33.9 Петафлопс.</li>
-          <li>Используется для научных исследований, моделирования и обработки данных.</li>
-          <li>В 2013 году был признан самым быстрым суперкомпьютером в мире.</li>
-        </ul>
-      </li>
-      <li><strong>LUMI</strong>
-        <ul>
-          <li>Разработан в Европе.</li>
-          <li>Планируемая производительность: 550 Петафлопс.</li>
-          <li>Ожидается в 2021 году как один из самых мощных суперкомпьютеров.</li>
-          <li>Используется для исследований в области экологии, здоровья и искусственного интеллекта.</li>
-        </ul>
-      </li>
-    </ol>
+  <div class="flex-row">
+    <div class="flex-col">
+      <h1>Суперкомпьютеры</h1>
+      <ol style="align-self: start; text-align: start;">
+        <li><strong>Fugaku</strong>
+          <ul>
+            <li>Разработан в Японии.</li>
+            <li>Производительность: 442.01 Петафлопс.</li>
+            <li>Используется для исследований в области медицины, физики и других научных областях.</li>
+            <li>На данный момент является самым быстрым суперкомпьютером в мире.</li>
+          </ul>
+        </li>
+        <li><strong>Summit</strong>
+          <ul>
+            <li>Разработан в США компанией IBM.</li>
+            <li>Производительность: 148.6 Петафлопс.</li>
+            <li>Оснащён более чем 27 тысячами процессоров.</li>
+            <li>Используется для различных научных исследований, в том числе в области искусственного интеллекта и машинного обучения.</li>
+          </ul>
+        </li>
+        <li><strong>Sierra</strong>
+          <ul>
+            <li>Также разработан в США, является частью программы по высокопроизводительным вычислениям для Национального ядерного центра.</li>
+            <li>Производительность: 94.6 Петафлопс.</li>
+            <li>Оснащён 15 тысячами процессоров.</li>
+            <li>Используется для симуляции ядерных взрывов и анализа других ядерных исследований.</li>
+          </ul>
+        </li>
+        <li><strong>Sunway TaihuLight</strong>
+          <ul>
+            <li>Разработан в Китае.</li>
+            <li>Производительность: 93.0 Петафлопс.</li>
+            <li>Является одним из самых мощных суперкомпьютеров, построенных в Китае.</li>
+            <li>Используется в таких областях, как метеорология, биология и исследования в области искусственного интеллекта.</li>
+          </ul>
+        </li>
+        <li><strong>Cray Titan</strong>
+          <ul>
+            <li>Разработан в США.</li>
+            <li>Производительность: 17.6 Петафлопс.</li>
+            <li>Используется для вычислений в научных, инженерных и образовательных приложениях.</li>
+            <li>Был одним из самых мощных суперкомпьютеров до 2018 года.</li>
+          </ul>
+        </li>
+        <li><strong>Blue Gene</strong>
+          <ul>
+            <li>Разработан в США, компанией IBM.</li>
+            <li>Используется в области биологии, медицины, химии и физики.</li>
+            <li>Разные версии Blue Gene демонстрируют различные уровни производительности, от нескольких терафлопс до петафлопс.</li>
+          </ul>
+        </li>
+        <li><strong>Tianhe-2 (Milky Way-2)</strong>
+          <ul>
+            <li>Разработан в Китае.</li>
+            <li>Производительность: 33.9 Петафлопс.</li>
+            <li>Используется для научных исследований, моделирования и обработки данных.</li>
+            <li>В 2013 году был признан самым быстрым суперкомпьютером в мире.</li>
+          </ul>
+        </li>
+        <li><strong>LUMI</strong>
+          <ul>
+            <li>Разработан в Европе.</li>
+            <li>Планируемая производительность: 550 Петафлопс.</li>
+            <li>Ожидается в 2021 году как один из самых мощных суперкомпьютеров.</li>
+            <li>Используется для исследований в области экологии, здоровья и искусственного интеллекта.</li>
+          </ul>
+        </li>
+      </ol>
+    </div>
+    <div class="flex-col">
+      <h2>Суперкомпьютеры специального назначения</h2>
+      <mark class="text" style="width: 800px; align-self: center">
+        Был разработан ряд специализированных систем, предназначенных для решения одной задачи. Это позволяет использовать
+        специально запрограммированных микросхем FPGA или даже специализированных ASIC, что позволяет улучшить соотношение цена/производительность, пожертвовав при этом
+        общности. Примерами специализированных суперкомпьютеров являются Belle, Deep Blue и Hydra для игры в
+        шахматы, Gravity Pipe для астрофизики, MDGRAPE-3 для предсказания структуры белков и молекулярной динамики,
+        и Deep Crack для взлома шифра DES.
+        Суперкомпьютеры используются в сферах:
+        где для решения задачи применяется численное моделирование, сопряженное с очень большим объёмом сложных вычислений;
+        где требуется большой объём сложных вычислений, обработка большого количества данных в реальном времени, или решение задачи может быть найдено простым перебором множества значений множества исходных параметров (см. Метод Монте-Карло).
+        Совершенствование методов численного моделирования происходило одновременно с совершенствованием вычислительных машин. Чем сложнее были задачи, тем выше были требования к создаваемым машинам. Чем быстрее были машины, тем сложнее были задачи, которые на них можно было решать. Поначалу суперкомпьютеры применялись почти исключительно для оборонных задач: расчёты по ядерному и термоядерному оружию, ядерным реакторам, проектированию подводных кораблей. Потом, по мере совершенствования математического аппарата численного моделирования, развития знаний в других сферах науки — суперкомпьютеры стали применяться и в мирных расчётах и расчётах двойного назначения, создавая новые научные дисциплины
+      </mark>
+    </div>
   </div>
-  <div class="flex-col">
-    <h2>Суперкомпьютеры специального назначения</h2>
-    <p class="text" style="width: 800px; align-self: center">
-      Был разработан ряд специализированных систем, предназначенных для решения одной задачи. Это позволяет использовать
-      специально запрограммированных микросхем FPGA или даже специализированных ASIC, что позволяет улучшить соотношение цена/производительность, пожертвовав при этом
-      общности. Примерами специализированных суперкомпьютеров являются Belle, Deep Blue и Hydra для игры в
-      шахматы, Gravity Pipe для астрофизики, MDGRAPE-3 для предсказания структуры белков и молекулярной динамики,
-      и Deep Crack для взлома шифра DES.
-    </p>
-  </div>
+
   <article>
-    <a href="public/source.html">Использованные источники</a>
+    <a href="pages/source.html">Использованные источники</a>
   </article>
 </main>
 <footer class="footer">
-  <h4>Разработка продолжается. Если вы встретили баг, пожалуйста, напишите <a href="https://t.me/tomtork">автору</a>.</h4>
+  <h4><var>Разработка продолжается. Если вы встретили баг, пожалуйста, напишите <a href="https://t.me/tomtork">автору</a>.</var></h4>
 </footer>
 <script type="module" src="/src/main.ts"></script>
 </body>
