--- a/pages/source.html
+++ b/pages/source.html
@@ -6,12 +6,13 @@
     <link rel="stylesheet" href="/src/style.css">
 </head>
 <body>
-<div class="flex-col">
-    <h1>Использованные источники</h1>
+<div class="flex-col h-full" style="background-image: linear-gradient(to right, rgba(255,255,255,0.5), rgba(166,72,72,0.5));">
+    <h1 style="text-decoration-line: underline">Использованные источники</h1>
     <ol style="text-align: start;">
         <li><a href="https://en.wikipedia.org/wiki/Supercomputer">Википедия</a></li>
         <li><a href="https://astanahub.com/ru/blog/superkompiutery-mira">Суперкомпьютеры мира</a></li>
     </ol>
+
     <div class="flex-col w-full">
         <a class="w-100" style="align-self: start; text-align: start; margin-left: 10px; margin-bottom: 20px; margin-top: 5px" href="../index.html">Вернуться на главную.</a>
     </div>
