--- a/pages/history.html
+++ b/pages/history.html
@@ -4,12 +4,30 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>История</title>
     <link rel="stylesheet" href="/src/style.css" type="text/css">
+    <style>
+        /*Первый div не имеет сдвига, а второй имеет, применяется, когда элементы следуют друг за другом*/
+        div + div {
+            margin-left: 10px;
+        }
+        div:first-letter {
+            font-size: 2em;
+            color: red;
+            font-weight: bold;
+        }
+        div:first-line {
+            font-weight: bold;
+            color: red;
+        }
+        [src$=".jpg"] {
+            border: 5px solid red;
+        }
+    </style>
 </head>
 <body>
 <div style="margin: 4px">
     <div>
         <div style="display: flex; flex-direction: row;">
-            <p class="text" style="margin: 10px; width: 800px;">
+            <div class="text" style="margin: 10px; width: 800px;">
                 В 1960 году UNIVAC построила Ливерморский компьютер атомных исследований (LARC), который сегодня считается одним из первых суперкомпьютеров.
                 для Центра исследований и разработок ВМС США. Он по-прежнему использовал высокоскоростную барабанную память, а не новую.
                 новую технологию дисковых накопителей.[14] Также среди первых суперкомпьютеров был IBM 7030 Stretch.
@@ -28,12 +46,12 @@
                 в любой момент времени. Атлас был совместным предприятием Ферранти и Манчестерского университета и был разработан
                 работать со скоростью обработки, приближающейся к одной микросекунде на инструкцию, около миллиона инструкций
                 в секунду.
-                Приступая в 1972 году к новому компьютеру, Крэй учел ошибки своего предыдущего неудачного проекта CDC 8600, а также плюсы и минусы конкурирующего проекта CDC STAR-100[англ.].
+                <p style="padding: 10px">Приступая в 1972 году к новому компьютеру, Крэй учел ошибки своего предыдущего неудачного проекта CDC 8600, а также плюсы и минусы конкурирующего проекта CDC STAR-100[англ.].</p>
 
                 Во-первых, он отказался от транзисторов в пользу интегральных микросхем (ИС), которые давали такую плотность упаковки логических элементов при высокой надежности, которую невозможно было достичь с помощью транзисторов. Это позволило без потери производительности повысить время на такт до 12,5 нс (80 МГц), вместо амбициозных 8 нс (125 МГц) в CDC 8600. Во-вторых, он отказался от многопроцессорной системы в пользу векторного процессора, как у проекта-конкурента CDC STAR-100.
 
                 Далее Крэй учел недостатки STAR-100. Компьютеру во время исполнения программы требуется выполнять как векторные, так и скалярные вычисления. STAR-100 показывал высокую скорость на векторных вычислениях, но был медленным в скалярных. Из-за этого мощь STAR-100 проявлялась только на специальных задачах, где требовалась обработка больших массивов данных. Для Cray-1 Сеймур Крэй построил процессор, который быстро выполнял и скалярные и векторные вычисления. Этого удалось добиться через создание так называемых «векторных регистров» — модулей памяти небольшого объёма, которые располагались близко к процессору и работали очень быстро (но стоили очень дорого). Таким образом центральный процессор брал данные из регистров и записывал данные тоже в регистры, реализуя новый принцип работы с памятью «регистр-регистр», в то время как CDC STAR-100 использовал прежний способ работы с памятью — «load-store», то есть чтение и запись в память (которая была медленной) напрямую. В CDC STAR-100 основная память была на ферромагнитных сердечниках, а в Cray-1 для памяти использовались полупроводники. Кроме того CDC STAR-100 строился совместимым с предыдущими моделями компании CDC 6600 и CDC 7600, а Cray-1 начинался с чистого листа, и совместимости с предыдущими моделями не требовалось, что значительно облегчало задачу Крэю. В 1974 году первые тесты машины показали производительность 80 MFLOPS.
-            </p>
+            </div>
             <div style="margin-top: 2px;">
                 <img src="/photos/sc2.jpg" alt="sc2" class="large-image" />
                 <p>Печатная плата IBM 7030.</p>
