--- a/index.html
+++ b/index.html
@@ -135,7 +135,11 @@
     <div class="flex-col">
       <h1>Суперкомпьютеры</h1>
       <ol style="align-self: start; text-align: start;">
-        <li><strong>Fugaku</strong>
+        <li>
+          <div class="flex-row align-center">
+            <strong>Fugaku</strong>
+            <img class="small-image" src="public/photos/fugaku.jpg" alt="fugaku" />
+          </div>
           <ul>
             <li>Разработан в Японии.</li>
             <li>Производительность: 442.01 Петафлопс.</li>
@@ -143,7 +147,11 @@
             <li>На данный момент является самым быстрым суперкомпьютером в мире.</li>
           </ul>
         </li>
-        <li><strong>Summit</strong>
+        <li>
+          <div class="flex-row align-center">
+            <strong>Summit</strong>
+            <img class="small-image" src="public/photos/summit.jpg" alt="summit" />
+          </div>
           <ul>
             <li>Разработан в США компанией IBM.</li>
             <li>Производительность: 148.6 Петафлопс.</li>
@@ -151,7 +159,11 @@
             <li>Используется для различных научных исследований, в том числе в области искусственного интеллекта и машинного обучения.</li>
           </ul>
         </li>
-        <li><strong>Sierra</strong>
+        <li>
+          <div class="flex-row align-center">
+            <strong>Sierra</strong>
+            <img class="small-image" src="public/photos/sierra.webp" alt="sierra" />
+          </div>
           <ul>
             <li>Также разработан в США, является частью программы по высокопроизводительным вычислениям для Национального ядерного центра.</li>
             <li>Производительность: 94.6 Петафлопс.</li>
@@ -159,7 +171,11 @@
             <li>Используется для симуляции ядерных взрывов и анализа других ядерных исследований.</li>
           </ul>
         </li>
-        <li><strong>Sunway TaihuLight</strong>
+        <li>
+          <div class="flex-row align-center">
+            <strong>Sunway TaihuLight</strong>
+            <img class="small-image" src="public/photos/sunway_taihuLight.jpg" alt="sunway" />
+          </div>
           <ul>
             <li>Разработан в Китае.</li>
             <li>Производительность: 93.0 Петафлопс.</li>
@@ -167,7 +183,11 @@
             <li>Используется в таких областях, как метеорология, биология и исследования в области искусственного интеллекта.</li>
           </ul>
         </li>
-        <li><strong>Cray Titan</strong>
+        <li>
+          <div class="flex-row align-center">
+            <strong>Cray Titan</strong>
+            <img class="small-image" src="public/photos/cray.jpg" alt="cray" />
+          </div>
           <ul>
             <li>Разработан в США.</li>
             <li>Производительность: 17.6 Петафлопс.</li>
@@ -175,14 +195,22 @@
             <li>Был одним из самых мощных суперкомпьютеров до 2018 года.</li>
           </ul>
         </li>
-        <li><strong>Blue Gene</strong>
+        <li>
+          <div class="flex-row align-center">
+            <strong>Blue Gene</strong>
+            <img class="small-image" src="public/photos/blue_gene.jpg" alt="blue" />
+          </div>
           <ul>
             <li>Разработан в США, компанией IBM.</li>
             <li>Используется в области биологии, медицины, химии и физики.</li>
             <li>Разные версии Blue Gene демонстрируют различные уровни производительности, от нескольких терафлопс до петафлопс.</li>
           </ul>
         </li>
-        <li><strong>Tianhe-2 (Milky Way-2)</strong>
+        <li>
+          <div class="flex-row align-center">
+            <strong>Tianhe-2 (Milky Way-2)</strong>
+            <img class="small-image" src="public/photos/tianhe.jpg" alt="tianhe2" />
+          </div>
           <ul>
             <li>Разработан в Китае.</li>
             <li>Производительность: 33.9 Петафлопс.</li>
@@ -190,7 +218,11 @@
             <li>В 2013 году был признан самым быстрым суперкомпьютером в мире.</li>
           </ul>
         </li>
-        <li><strong>LUMI</strong>
+        <li>
+          <div class="flex-row align-center">
+            <strong>LUMI</strong>
+            <img class="small-image" src="public/photos/lumi.jpg" alt="lumi" />
+          </div>
           <ul>
             <li>Разработан в Европе.</li>
             <li>Планируемая производительность: 550 Петафлопс.</li>
