--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <td>
         <div class="flex-row items-center" style="gap: 10px">
           <a href="https://habr.com/ru/articles/158389/">
-            <img style="filter: grayscale(100%)" class="logo" src="/public/photos/cray.jpg" alt="cray" />
+            <img style="filter: grayscale(100%)" class="logo" src="/photos/cray.jpg" alt="cray" />
           </a>
           <p>Cray Titan</p>
         </div>
@@ -138,7 +138,7 @@
         <li>
           <div class="flex-row align-center">
             <strong>Fugaku</strong>
-            <img class="small-image" src="public/photos/fugaku.jpg" alt="fugaku" />
+            <img class="small-image" src="/photos/fugaku.jpg" alt="fugaku" />
           </div>
           <ul>
             <li>Разработан в Японии.</li>
@@ -150,7 +150,7 @@
         <li>
           <div class="flex-row align-center">
             <strong>Summit</strong>
-            <img class="small-image" src="public/photos/summit.jpg" alt="summit" />
+            <img class="small-image" src="/photos/summit.jpg" alt="summit" />
           </div>
           <ul>
             <li>Разработан в США компанией IBM.</li>
@@ -162,7 +162,7 @@
         <li>
           <div class="flex-row align-center">
             <strong>Sierra</strong>
-            <img class="small-image" src="public/photos/sierra.webp" alt="sierra" />
+            <img class="small-image" src="/photos/sierra.webp" alt="sierra" />
           </div>
           <ul>
             <li>Также разработан в США, является частью программы по высокопроизводительным вычислениям для Национального ядерного центра.</li>
@@ -174,7 +174,7 @@
         <li>
           <div class="flex-row align-center">
             <strong>Sunway TaihuLight</strong>
-            <img class="small-image" src="public/photos/sunway_taihuLight.jpg" alt="sunway" />
+            <img class="small-image" src="/photos/sunway_taihuLight.jpg" alt="sunway" />
           </div>
           <ul>
             <li>Разработан в Китае.</li>
@@ -186,7 +186,7 @@
         <li>
           <div class="flex-row align-center">
             <strong>Cray Titan</strong>
-            <img class="small-image" src="public/photos/cray.jpg" alt="cray" />
+            <img class="small-image" src="/photos/cray.jpg" alt="cray" />
           </div>
           <ul>
             <li>Разработан в США.</li>
@@ -198,7 +198,7 @@
         <li>
           <div class="flex-row align-center">
             <strong>Blue Gene</strong>
-            <img class="small-image" src="public/photos/blue_gene.jpg" alt="blue" />
+            <img class="small-image" src="/photos/blue_gene.jpg" alt="blue" />
           </div>
           <ul>
             <li>Разработан в США, компанией IBM.</li>
@@ -209,7 +209,7 @@
         <li>
           <div class="flex-row align-center">
             <strong>Tianhe-2 (Milky Way-2)</strong>
-            <img class="small-image" src="public/photos/tianhe.jpg" alt="tianhe2" />
+            <img class="small-image" src="/photos/tianhe.jpg" alt="tianhe2" />
           </div>
           <ul>
             <li>Разработан в Китае.</li>
@@ -221,7 +221,7 @@
         <li>
           <div class="flex-row align-center">
             <strong>LUMI</strong>
-            <img class="small-image" src="public/photos/lumi.jpg" alt="lumi" />
+            <img class="small-image" src="/photos/lumi.jpg" alt="lumi" />
           </div>
           <ul>
             <li>Разработан в Европе.</li>
