--- a/index.html
+++ b/index.html
@@ -262,6 +262,11 @@
       </label>
     </div>
   </div>
+
+  <div class="flex-col">
+    <a href="pages/lab31.html">Лабораторная работа 3 — Вариант 3 (Задание 1)</a>
+    <a href="pages/lab32.html">Лабораторная работа 3 — Вариант 3 (Задание 2)</a>
+  </div>
 </main>
 <footer class="footer">
   <h4><var>Разработка продолжается. Если вы встретили баг, пожалуйста, напишите <a href="https://t.me/tomtork">автору</a>.</var></h4>
